--- a/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
@@ -233,18 +233,24 @@
                     </thead>
                     <tbody *ngIf="userPrivilegeList?.length != 0">
                       <ng-container *ngFor="let privilege of userPrivilegeList">
-                        
+
                         <tr *ngIf="privilege.rowSpan == 2 || privilege.rowSpan == 1">                       
                           <td [attr.rowspan]="privilege.rowSpan">{{ privilege.module.displayName }}</td>                      
                           <td>{{ privilege.feature.displayName }}</td>                         
                           <td>
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                              <button type="button" class="btn btn-secondary btnSaveColor" (click)="edit(verticallyCenteredModal,privilege)">
-                                Edit
-                              </button>
-                              <button type="button" class="btn btn-danger btnDeleteColor" (click)="delete(privilege.id)">
-                                Delete
-                              </button>
+                            <div>                              
+                              <label class = "checkbox-inline" style="margin-left: 10%;">
+                                <input type = "checkbox" value = "">View
+                             </label>
+                             <label class = "checkbox-inline"  style="margin-left: 10%;">
+                                <input type="checkbox" value="">Create
+                             </label>
+                             <label class = "checkbox-inline"  style="margin-left: 10%;">
+                                <input type = "checkbox" value = "">Update
+                             </label>
+                             <label class = "checkbox-inline"  style="margin-left: 10%;">
+                              <input type = "checkbox" value = "">Delete
+                           </label>
                             </div>
                           </td>
                         </tr>                        
@@ -252,13 +258,19 @@
                         <tr *ngIf="privilege.rowSpan == -1">
                            <td>{{ privilege.feature.displayName }}</td>                         
                           <td>
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                              <button type="button" class="btn btn-secondary btnSaveColor" (click)="edit(verticallyCenteredModal,privilege)">
-                                Edit
-                              </button>
-                              <button type="button" class="btn btn-danger btnDeleteColor" (click)="delete(privilege.id)">
-                                Delete
-                              </button>
+                            <div>                            
+                              <label class = "checkbox-inline" style="margin-left: 10%;">
+                                <input type = "checkbox" value = "">View
+                             </label>
+                             <label class = "checkbox-inline"  style="margin-left: 10%;">
+                                <input type="checkbox" value="">Create
+                             </label>
+                             <label class = "checkbox-inline"  style="margin-left: 10%;">
+                                <input type = "checkbox" value = "">Update
+                             </label>
+                             <label class = "checkbox-inline"  style="margin-left: 10%;">
+                              <input type = "checkbox" value = "">Delete
+                           </label>
                             </div>
                           </td>
                         </tr>
