--- a/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
+++ b/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
@@ -41,7 +41,10 @@
                                 <option value="2">2021</option>
                                 <option value="3">2020</option>
                               </select>
-                            <c-chart type="pie" [data]="chartPieData"></c-chart>
+                              <!-- <div style="position: relative; height:20vh; width:20vw">
+                               
+                              </div> -->
+                                   <c-chart type="pie" [data]="chartPieData"></c-chart>
                           </c-card-body>
                     </c-card>
                 </c-col>
