--- a/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
@@ -1,7 +1,7 @@
 <c-col xs="12">
   <c-card class="mb-4">
     <c-card-header>
-      <strong>User Registration</strong>
+      <strong>User {{pageName}}</strong>
     </c-card-header>
     <c-card-body>
       <form [formGroup]="countryForm" (ngSubmit)="onSubmit()" novalidate>
