IA-90 dynamic data binding

--- a/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
@@ -101,6 +101,7 @@
                         {{designation.name}}
                       </option>
                     </select>
+                    <label for="empDesignation" style="float: right;">Select Designation</label>
                   </div>
 
                   <div cRow *ngIf="countryForm.get('empDesignation')?.invalid &&
