--- a/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
@@ -9,17 +9,31 @@
           <div class="card-body">
             <div class="row">
               <div class="col-lg-12">
+                <form [formGroup]="userListForm">
                 <div class="row">
                   <div class="col-3">
-                    <input type="text" [(ngModel)]="userName" class="form-control pull-right" placeholder="User Name"/>
+                    <input type="text" formControlName="userName" id="userName" class="form-control pull-right" placeholder="User Name"/>
                   </div>
                   <div class="col-3">
-                    <input type="text" [(ngModel)]="employeeName" class="form-control pull-right" placeholder="Employee Name"/>
+                    <input type="text" formControlName="employeeName" id="employeeName" class="form-control pull-right" placeholder="Employee Name"/>
                   </div>
-                  <div class="col-3">
-                    <!-- <input type="text"  [(ngModel)]="userRole" class="form-control pull-right" placeholder="User Role"/> -->
+                  <!-- <div class="col-3">
                     <select class="form-control" [(ngModel)]="userRole" >
-                      <option selected [value]=" ">Select Role</option>
+                      <option selected [value]="">Select Role</option>
+                      <option *ngFor="let role of roles" [value]="role.name"> {{role.name}}</option>
+                    </select>
+                  </div> -->
+                  <!-- <div class="col-3">
+                    <select aria-label="Floating label select example" cSelect id="userRole"
+                      formControlName="userRole" name="userRole">
+                      <option [value]=''>Select Role</option>
+                      <option *ngFor="let role of roles" [value]="role.name"> {{role.name}}</option>
+                    </select>
+                  </div> -->
+                  <div class="col-3" >
+                    <select aria-label="Floating label select example" cSelect id="userRole"
+                      formControlName="userRole" name="userRole">
+                      <option value="">Select Role</option>
                       <option *ngFor="let role of roles" [value]="role.name"> {{role.name}}</option>
                     </select>
                   </div>
@@ -30,6 +44,7 @@
                   </div>
 
                 </div>
+              </form>
               </div>
             </div>
             <br>
