--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-criteria/risk-criteria.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-criteria/risk-criteria.component.html
@@ -1,1 +1,213 @@
-<p>risk-criteria works!</p>
+<div class="animated fadeIn">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card">
+          <div class="card-header">
+            <div class="fa fa-align-justify" >Risk Profile List</div> 
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-7 mb-2">
+                    <!-- <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>Create Risk Criteria</button> -->
+  
+              </div>
+              <div class="col-sm-5 mb-2">
+                <div class="row">
+                  <div class="col-8">
+                    <!-- <input type="text" [(ngModel)]="searchText" class="form-control pull-right" placeholder="Search by Code"/> -->
+                    <input type="text" class="form-control pull-right" placeholder="Search by Name"/>
+                  </div>
+                  <div class="col-2">
+                    <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="search()" >
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </button> -->
+                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" >
+                      Search
+                  </button>
+                  </div>
+                  <div class="col-2">
+                    <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="clearSearch()" >
+                        <i [ngClass]="searchText ? 'fa fa-times' : 'fa fa-refresh'" aria-hidden="true"></i>
+                    </button> -->
+                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal"  >
+                      Reset
+                  </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row overflow-auto">
+                <!-- <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" > -->
+                    <table>
+                  <thead>
+                    <tr>
+                       <th>Country</th>
+                      <th>Risk Criteria Name</th>
+                      <th>Minimum Value</th>
+                      <th>Maximum Value</th>
+                      <th>Rating</th>
+                      <th>Score</th>
+                      <th>Effective From</th>
+                      <th>Effective To</th>  
+                      <th>Description</th>   
+                      <th>Action</th>                 
+                    </tr>
+                  </thead>
+                  <!-- <tbody *ngIf="riskCriteriaForm?.length != 0"> -->
+                    <tr *ngFor="let riskCriteria of riskCriteriaForm">
+
+                      <td>{{ riskCriteria.countryId }}</td>
+                      <td>{{ riskCriteria.riskCriteriaType }}</td>
+                      <td>{{ riskCriteria.minimumValue }}</td>
+                      <td>{{ riskCriteria.maximumValue }}</td>
+                      <td>{{ riskCriteria.ratingType }}</td>
+                      <td>{{ riskCriteria.score }}</td>
+                      <td>{{ riskCriteria.effectiveFrom | date:'medium' }}</td>
+                      <td>{{ riskCriteria.effectiveTo | date:'medium' }}</td>
+                      <td>{{ riskCriteria.description }}</td>
+                      <td>
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                          <button type="button" class="btn btn-secondary btnSaveColor" (click)="edit(verticallyCenteredModal,riskCriteria)">
+                           Edit
+                          </button>
+                          <button type="button" class="btn btn-danger btnDeleteColor" (click)="delete(riskCriteria.id)">
+                            Delete
+                          </button>
+                        </div>
+                      </td>
+                    </tr>
+                  <!-- </tbody> -->
+                  <!-- <tbody *ngIf="riskCriteriaForm?.length == 0"> -->
+                    <tr>
+                      <td colspan="5" class="no-data-available">No data!</td>
+                    </tr>
+                  <!-- </tbody> -->
+                </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <form>
+  <!-- <form [formGroup]="riskCriteriaForm" (ngSubmit)="onSubmit(verticallyCenteredModal)" novalidate> -->
+    <!-- <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
+      <c-modal-header>
+        <h5 cModalTitle *ngIf="!formService.isEdit(this.riskCriteriaForm.get('id'))">Create Risk Criteria</h5>
+        <h5 cModalTitle *ngIf="formService.isEdit(this.riskCriteriaForm.get('id'))">Update Risk Criteria</h5>
+        <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button> 
+      </c-modal-header> -->
+       <!-- <c-modal-body> -->
+        <div class="col-md-12" >
+          <input type="hidden" formControlName="id"/>  
+            <!-- <div form-floating>
+              <select aria-label="Floating label select example" cSelect id="likelihoodTypeId"
+                formControlName="likelihoodTypeId" name="likelihoodTypeId">
+                <option value=null>Select Likelihood Level</option>
+                <option *ngFor="let commonValueAndType of likelihoodType" [value]="commonValueAndType.id">
+                  {{commonValueAndType.text}}
+                </option>
+              </select>
+            </div>
+  
+            <div cRow *ngIf="(riskProfileForm.get('likelihoodTypeId')?.invalid && riskProfileForm.get('likelihoodTypeId')?.errors) &&         
+              (riskProfileForm.get('likelihoodTypeId')?.dirty || riskProfileForm.get('likelihoodTypeId')?.touched)">
+              <small class="text-danger">
+                This field is required.
+              </small>                                 
+            </div> 
+            <br> -->
+  
+            <div form-floating>
+              <select aria-label="Floating label select example" cSelect id="riskCriteriaTypeId"
+                formControlName="riskCriteriaTypeId" name="riskCriteriaTypeId">
+                <option value="null">Select Risk Criteria</option>
+                <option *ngFor="let commonValueAndType of riskCriteriaType" [value]="commonValueAndType.id">
+                  {{commonValueAndType.text}}
+                </option>
+              </select>
+            </div>
+
+            <div cRow *ngIf="((riskCriteriaForm.get('riskCriteriaTypeId')?.invalid && riskCriteriaForm.get('riskCriteriaTypeId')?.errors)) &&
+              (riskCriteriaForm.get('riskCriteriaTypeId')?.dirty || riskCriteriaForm.get('riskCriteriaTypeId')?.touched)">
+              <small class="text-danger">
+                This field is required.
+              </small>                                 
+            </div> 
+            <br>
+
+            <div class="form-floating">
+                <textarea class="form-control" placeholder="minimumValue" formControlName="minimumValue" id="minimumValue"></textbox>
+                <label for="floatingTextarea">Minimum Value</label>
+              </div>
+
+              <div class="form-floating">
+                <textarea class="form-control" placeholder="maximumValue" formControlName="maximumValue" id="maximumValue"></textbox>
+                <label for="floatingTextarea">Maximum Value</label>
+              </div>
+  
+
+  
+            <div form-floating>
+              <select aria-label="Floating label select example" cSelect id="ratingTypeId"
+                formControlName="ratingTypeId" name="ratingTypeId">
+                <option value="null">Select Risk Rating</option>
+                <!-- <option *ngFor="let commonValueAndType of ratingType" [value]="commonValueAndType.id">
+                  
+                </option> -->
+              </select>
+            </div>
+  
+            <div cRow *ngIf="((riskCriteriaForm.get('ratingTypeId')?.invalid && riskCriteriaForm.get('ratingTypeId')?.errors)) &&
+              (riskCriteriaForm.get('ratingTypeId')?.dirty || riskCriteriaForm.get('ratingTypeId')?.touched)">
+              <small class="text-danger">
+                This field is required.
+              </small>                                 
+            </div> 
+            <br>
+  
+            <div class="form-floating">
+              <textarea class="form-control" placeholder="description" formControlName="description" id="description"></textarea>
+              <label for="floatingTextarea">Description</label>
+            </div>
+            <!-- <small class="text-danger"
+                      *ngIf="riskProfileForm.get('description')?length && riskProfileForm.get('description').hasError('maxlength')">
+                      The maximum length for this field is {{riskProfileForm.get('description').errors.maxlength.requiredLength}} characters.
+            </small> -->
+            <br>
+            
+            <div class="form-floating">
+              <input class="form-control" placeholder="effectiveFrom" formControlName="effectiveFrom" id="effectiveFrom" type="date" >
+              <label for="effectiveFrom">Effective From</label>
+            </div>
+            <div cRow *ngIf="riskCriteriaForm.get('effectiveFrom')?.invalid && riskCriteriaForm.get('effectiveFrom')?.errors &&
+                  (riskCriteriaForm.get('effectiveFrom')?.dirty || riskCriteriaForm.get('effectiveFrom')?.touched)">
+              <small class="text-danger" *ngIf="riskProfileForm.get('effectiveFrom').hasError('required')">
+                This field is required.
+              </small>                                 
+            </div>
+            <br>
+  
+            <div class="form-floating">
+              <input class="form-control" placeholder="effectiveTo" formControlName="effectiveTo" id="effectiveTo" type="date" >
+              <label for="effectiveTo">Effective To</label>
+            </div>
+            <div cRow *ngIf="riskCriteriaForm.get('effectiveTo')?.invalid && riskCriteriaForm.get('effectiveTo')?.errors &&
+                  (riskCriteriaForm.get('effectiveTo')?.dirty || riskCriteriaForm.get('effectiveTo')?.touched)">
+              <small class="text-danger" *ngIf="riskProfileForm.get('effectiveTo').hasError('required')">
+                This field is required.
+              </small>                                 
+            </div>
+            <br>          
+    
+        </div>
+      <!-- </c-modal-body> 
+       <c-modal-footer>
+        <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit(verticallyCenteredModal)">Save</button>
+             <button [cModalToggle]="verticallyCenteredModal.id" cButton class="btn btn-danger btnCancelColor me-1"> 
+              Close
+         </button> 
+      </c-modal-footer> 
+    </c-modal> -->
+    </form>
