--- a/src/ui/internal-audit/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/ui/internal-audit/src/app/containers/default-layout/default-header/default-header.component.html
@@ -89,7 +89,7 @@
       </li>
       <li></li>
       <li>
-        <a [routerLink]="[]" cDropdownItem>
+        <a [routerLink]="['/security/profile-update']" cDropdownItem>
           <svg cIcon class="me-2" name="cilUser"></svg>
           Profile
         </a>
